[package]
name = "vlung-analysis"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
repository = "https://github.com/puripuri2100/vlung-analysis"
description = ""
readme = "README.md"
categories = ["command-line-interface", "computer-vision", "encoding"]
keywords = ["dicom"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
dicom = "0.6.1"
dicom-pixeldata = { version = "0.2.0", features = ["ndarray"] }
image = "0.24.6"
ndarray = "0.15.6"
rand = "0.8.5"
regex = "1.9.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
